# AppliedRL

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp  run.sh
Agents/: Q_Agent.cpp  Q_Agent_2.cpp
Agents/include/: BaseRLAgent.hpp  Q_Agent.hpp  Q_Agent_2.hpp
Greediness/: greediness.cpp
Greediness/include/: greediness.hpp
HaxBallEnv/: README.md
HaxBallEnv/include/: BaseAgent.h  HaxBall.h  HaxBallGui.h  RandomAgent.h
HaxBallEnv/src/: BaseAgent.cpp  HaxBall.cpp  HaxBallGui.cpp  RandomAgent.cpp
Quantisation/: QuantGridPlayer.cpp  QuantGridPlayerAngleBall.cpp  QuantGridPlayerBall.cpp  Quantisation.cpp
Quantisation/Quants/: QuantAngleBallToGoal.cpp  QuantAngleBallToPlayer.cpp  QuantAngleBallToPlayerComplex.cpp  QuantAnglePlayerToGoal.cpp  QuantBallBehindAgent.cpp  QuantBallPosX.cpp  QuantBallPosY.cpp  QuantDistanceBallToGoal.cpp  QuantDistanceBallToPlayer.cpp  QuantPlayerPosX.cpp  QuantPlayerPosY.cpp  QuantVelocity.cpp  QuantVelocityX.cpp  QuantVelocityY.cpp
Quantisation/include/: BaseQuantisation.hpp  Quant.hpp  QuantGridPlayer.hpp  QuantGridPlayerAngleBall.hpp  QuantGridPlayerBall.hpp  Quantisation.hpp
Reward/: BaseReward.cpp  RewardBall.cpp  RewardGoal.cpp  RewardPoint.cpp
Reward/include/: BaseReward.hpp  RewardBall.hpp  RewardGoal.hpp  RewardPoint.hpp
Scripts/: plot_reward.py
Storage/MK_1/: agent.info  benchmark.info  q_matrix.csv  training.info  training_reward.info
Storage/MK_1_neu/: benchmark.info  q_matrix.csv  training_reward.info
Storage/MK_1_neu_neu/: benchmark.info  q_matrix.csv  training.info  training_reward.info
Storage/MK_2/: action_vector.info  benchmark.info  q_matrix.csv  training_reward.info
Storage/MK_2_neu/: q_matrix.csv
Storage/MK_3/: quantisation.info
Storage/MK_4/: QuantDistanceBallToPlayer.info  benchmark.info  q_matrix.csv  training.info  training_reward.info
Storage/Milestone_1/: agent.info  q_matrix.csv  quantisation.info  training_reward.info
Trainer/: trainer.cpp
Trainer/include/: trainer.hpp
Utilities/: QuantUtils.cpp  file_handling.cpp
Utilities/include/: QuantUtils.hpp  file_handling.hpp
